[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/misc/Quest.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/UI/Quest_Plack_background.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/UI/Check.png" type="Texture" id=3]

[node name="Quest" type="Node2D"]
script = ExtResource( 1 )

[node name="QuestBackgorund" type="Sprite" parent="."]
position = Vector2( 880.013, 89.1905 )
texture = ExtResource( 2 )

[node name="To Do List" type="RichTextLabel" parent="."]
margin_left = 831.791
margin_top = 23.9122
margin_right = 906.791
margin_bottom = 39.9122
rect_pivot_offset = Vector2( 31.2477, 3.4048 )
text = "TO DO LIST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fix sinking boat" type="RichTextLabel" parent="."]
margin_left = 798.206
margin_top = 52.0
margin_right = 921.206
margin_bottom = 73.0
text = "Fix sinking boat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light signal bonfire" type="RichTextLabel" parent="."]
margin_left = 799.365
margin_top = 77.3654
margin_right = 934.365
margin_bottom = 98.3654
text = "Light signal bonfire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealWoondedNative" type="RichTextLabel" parent="."]
margin_left = 800.539
margin_top = 101.374
margin_right = 943.539
margin_bottom = 119.374
text = "Heal woonded native"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Check1" type="Sprite" parent="."]
position = Vector2( 782.944, 55.2689 )
texture = ExtResource( 3 )

[node name="Check2" type="Sprite" parent="."]
position = Vector2( 785.6, 82.6197 )
texture = ExtResource( 3 )

[node name="Check3" type="Sprite" parent="."]
position = Vector2( 787.023, 106.658 )
texture = ExtResource( 3 )
